--- a/personal_flolder2.0/anakin_turns_to_the_dark_side.html
+++ b/personal_flolder2.0/anakin_turns_to_the_dark_side.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
-    <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
+    <link rel="stylesheet" type="text/css" href="styles/anikan_site-plan.css">
 
     <!-- Link to an external CSS file -->
 
