--- a/personal_flolder2.0/quotes_and_memorable_moments_of_anakin_skywalker.html
+++ b/personal_flolder2.0/quotes_and_memorable_moments_of_anakin_skywalker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
-    <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
+    <link rel="stylesheet" type="text/css" href="styles/anikan_site-plan.css">
     <style>
         /* CSS styles */
         /* ... Your existing CSS styles ... */
@@ -84,7 +84,7 @@ p {
         <h2>Quotes and memorable moments of Anakin Skywalker</h2>
         
         <a id="logo_link" href="index.html">
-            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
+            <img class="logo" src="image/AnakinSkywalkerTheChosenOne'sLegacy.png" >
         </a>
             <nav>
                 <a href="anakin_skywalker_index.html" >Home</a>
