--- a/personal_flolder2.0/anakin_turns_to_the_dark_side.html
+++ b/personal_flolder2.0/anakin_turns_to_the_dark_side.html
@@ -10,7 +10,50 @@
     <style>
         /* CSS styles */
 
-        /* ... Your existing CSS styles ... */
+            /* Two-column layout styles */
+            .container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+
+        .column {
+            width: 45%;
+            margin: 10px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .column img {
+            max-width: 100%;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0 auto;
+            padding: 0;
+        }
+        header {
+            background-color: #7df9ff;
+            color: #040720 ;
+            padding: 10px;
+            text-align: center;
+        }
+        /* Add styling for specific elements if needed */
+        .content {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .content img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
 
         /* Additional styles as needed */
     </style>
