--- a/wwr/positioning.html
+++ b/wwr/positioning.html
@@ -4,7 +4,6 @@
     <!-- HTML - Name: positioning.html -->
     <title>Positioning Activity</title>
     <link rel="stylesheet" type="text/css" href="positionstyles.css" />
-   
   </head>
   <body>
     <div class="activity">
@@ -13,7 +12,7 @@
     <div class="activity">
       <h2>Activity 1</h2>
       <section class="hint"><input type="checkbox" ><i></i> <h3>Hint 1</h3><div><p>Check out the <a href="https://byui-wdd.github.io/wdd130/activities/w06-css-positioning.html" target="_blank">activity instructions</a> in Ilearn!</p></div></section>
-      <p>Follow the <a href="https://byui-wwd.github.io/wdd130/activities/w06-css-positioning.html" target="_blank">instructions</a> to make the boxes match  <a href="https://byui-wdd.github.io/wdd130/images/example1.png" target="_blank">this</a> image.</p>
+      <p>Follow the <a href="https://byui-wdd.github.io/wdd130/activities/w06-css-positioning.html" target="_blank">instructions</a> to make the boxes match  <a href="https://byui-wdd.github.io/wdd130/images/example1.png" target="_blank">this</a> image.</p>
       <div class="content1" >
         <div class="red1" ></div>
         <div class="green1" ></div>
@@ -85,5 +84,6 @@
     </div>
   </body>
 </html>
+
 
 
