--- a/personal_flolder2.0/anakin_turns_to_the_dark_side.html
+++ b/personal_flolder2.0/anakin_turns_to_the_dark_side.html
@@ -56,6 +56,19 @@
         }
 
         /* Additional styles as needed */
+        /* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+  .column {
+      flex: 0 1 calc(50% - 20px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .column {
+      flex: 1 0 100%;
+      margin-right: 0;
+  }
+}
     </style>
 </head>
 <body>
@@ -80,11 +93,15 @@
         <section class="container">
             <article class="column">
                 <img src="image/download (2).jpeg" alt="First Image for page 4">
-                <p>  "Anakin's Turn to the Dark Side," is a gripping exploration of the momentous turning point in Anakin's life when he succumbs to the allure of the dark side and becomes Darth Vader...</p>
+                <p>   "Anakin's Turn to the Dark Side," is a gripping exploration of the momentous turning point in Anakin's life when he succumbs to the allure of the dark side and becomes Darth Vader. The page delves deep into the events, emotions, and choices that led to this dramatic transformation. Through compelling content and dramatic imagery, it immerses visitors in the darkness that shrouds Anakin's later years. This section offers a powerful examination of the inner conflict and external forces that drive Anakin's descent into one of the most iconic villains in cinematic history. The two images featured on this page capture the ominous and menacing presence that Darth Vader embodies, providing a visually striking portrayal of this critical juncture in Anakin's life.</p>
             </article>
             <article class="column">
                 <img src="image/download (3).jpeg" alt="Second Image for page 4">
-                <p> Anakin Skywalker, a central character in the Star Wars saga, ultimately becomes Darth Vader...</p>
+                Anakin Skywalker, a central character in the Star Wars saga, ultimately becomes Darth Vader. Anakin was a promising Jedi Knight who fell to the dark side of the Force due to various reasons, including fear, anger, and manipulation by Emperor Palpatine. As Anakin, he was a skilled and powerful Jedi who played a significant role in the Clone Wars. However, his fear of losing his loved ones, particularly his wife Padmé Amidala, and his emotional turmoil led him to distrust the Jedi Order.
+                    
+                Eventually, in Revenge of the Sith, Anakin succumbs to the dark side, influenced by Palpatine's promises to save Padmé from death. He pledges himself to the Sith and adopts the name Darth Vader. After a lightsaber duel with his former mentor, Obi-Wan Kenobi, on the volcanic planet Mustafar, Anakin suffers severe injuries and is encased in a life-supporting suit, becoming the iconic black-clad villain known as Darth Vader.
+                
+                Throughout the original trilogy, Darth Vader serves as the right-hand enforcer of Emperor Palpatine, feared across the galaxy for his power in the dark side of the Force. However, his story takes a pivotal turn when his son, Luke Skywalker, helps him rediscover his humanity, leading to his redemption in Return of the Jedi by ultimately saving Luke and destroying the Emperor, bringing balance to the Force. Anakin Skywalker's journey from a promising Jedi to the feared Sith Lord Darth Vader and back to redemption is a central theme of the Star Wars saga. </p>
             </article>
         </section>
     </main>
