--- a/personal_folder3.0/quotes_of_anakin_skywalker_and_darth_vader.html
+++ b/personal_folder3.0/quotes_of_anakin_skywalker_and_darth_vader.html
@@ -113,15 +113,23 @@
                     <p>"He's as clumsy as he is stupid."-Star Wars Episode V: The Empire Strikes Back</p>
           <p>You don't know the power of the dark side! I must obey my master."- Star Wars Episode VI:Return of the Jedi</p>
           <P>"This will be a day long remembered. It has seen the end of Kenobi. It will soon see the end of the rebellion."- Star Wars Episode IV: A New Hope</P>
-          <p>"I am altering the dearl. Pray I don't alter it any further.-Star Wars Episode V: The Empire Strikes Back</p>
-          <p>"Be careful not to choke on your aspirations"</p>
+          <p>"I am altering the deal. Pray I don't alter it any further.-Star Wars Episode V: The Empire Strikes Back</p>
+          <p>"Be careful not to choke on your aspirations,Director"</p>
           <p>"You have controlled your fear. Now, release your anger. Only your hatred can destroy me."- Star Wars Episode V: The Empire Strikes Back </p>
           <p>"When I left you, I was but the learner. Now I am the master."-Star wars Episode IV: A New Hope.</p>
           <p>"Anakin is gone. I am what remains.. I am not your failure, Obi-Wan. You didn't kill Anikan Skywalker, I did."</p>
           <p>"Luke, you can destroy the Emperor. He has foreseen this. It is your destiny. Join me, and together we can rule the galaxy as father and son."</p>
           <p>"Strong people don't put others down. They lift them up"</p>
           <p>"The force is with you. Young Skywalker. But you are not a Jedi Yet"</p>
-          <p></p>
+          <p>"You have failed me for the last time Admiral"</p>
+          <p>"Don't make me destroy you"</p>
+          <p>"Your strength has returned but the weakness still remains."</p>
+          <p>"You don't know the power of the Dark Side"</p>
+          <p>"Then you will die braver than most"</p>
+          <p>"The force is strong with this one"</p>
+          <p>"I find your lack of faith disturbing"</p>
+          <p>"No, I am your father."</p>
+          <p>"Don't be too proud of the technological terror yo've constructed. The ability to destory a planet is insignificant nect to the power of the force."</p>
                   </div>
                 
             </div>
