--- a/personal-folder/anakin_turns_to_the_dark_side.html
+++ b/personal-folder/anakin_turns_to_the_dark_side.html
@@ -40,7 +40,6 @@
          header,
         footer {
         text-align: center;
-        padding: auto;
 }
     nav a {
     margin: 0 10px;
@@ -69,10 +68,10 @@
         
         
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Anakin Skywalker The Chosen One's Legacy.png" alt="Anakin Skywalker - The Chosen One's Legacy">
+            <img class="logo" src="images/Anakin Skywalker The Chosen One's Legacy.png" >
 
             <nav>
-                <a href="anakin_skywalker_index.html">Home</a>
+                <a href="anakin_skywalker_index.html">Home </a>
                 <a href="anakin's_younger_years.html">Page 2 </a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
                 <a href="anakin_turns_to_the_dark_side.html">Page 4</a> 
@@ -83,7 +82,7 @@
         <main class="content">
             <div class="container">
                 <div class="column">
-                    <img src="images/Darth Vader and AnikQuotes.png" alt="First Image for home page">
+                    <img src="images/download (2).jpeg" alt="First Image for home page">
                     <p>"Anakin Turn to the Dark Side," is a gripping exploration of the momentous turning point in Anakin's life when he succumbs to the allure of the dark side and becomes Darth Vader. The page delves deep into the events, emotions, and choices that led to this dramatic transformation. Through compelling content and dramatic imagery, it immerses visitors in the darkness that shrouds Anakin's later years. This section offers a powerful examination of the inner conflict and external forces that drive Anakin's descent into one of the most iconic villains in cinematic history. The two images featured on this page capture the ominous and menacing presence that Darth Vader embodies, providing a visually striking portrayal of this critical juncture in Anakin's life.</p>
                 </div>
                 <div class="column">
