--- a/personal-folder/anakin_turns_to_the_dark_side.html
+++ b/personal-folder/anakin_turns_to_the_dark_side.html
@@ -68,11 +68,11 @@
         
         
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Anakin Skywalker The Chosen One's Legacy.png" >
+            <img class="logo" src="images/Anakin_Skywalker_The_Chosen_One's_Legacy.png" alt="Anakin Skywalker - The Chosen One's Legacy">
 
             <nav>
-                <a href="anakin_skywalker_index.html">Home </a>
-                <a href="anakin's_younger_years.html">Page 2 </a>
+                <a href="anakin_skywalker_index.html">Home</a>
+                <a href="anakin's_younger_years.html">Page 2</a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
                 <a href="anakin_turns_to_the_dark_side.html">Page 4</a> 
                 <a href="quotes_of_anakin_skywalker_and_darth_vader.html">Page 5</a>
