--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -67,7 +67,7 @@
         <h1>How Anikan Skywalker is the Chosen One.</h1>
         
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Anakin Skywalker The Chosen One's Legacy.png" alt="Anakin Skywalker - The Chosen One's Legacy">
+            <img class="logo" src="images/Anakin_Skywalker_The_Chosen_One's_Legacy.png" alt="Anakin_Skywalker-The_Chosen_One's_Legacy">
 
             <nav>
                 <a href="anakin_skywalker_index.html">Home</a>
