--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Site Plan</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
-  </head>
-
-  <body>
+</head>
+<body>
     <header>
-      <h1>How Anakin Skywalker is the Chosen One Site Plan</h1>
-      <h2>Samantha Mayes</h2>
-      <h2>WDD 130-01</h2>
+        <h1>How Anakin Skywalker is the Chosen One Site Plan</h1>
+        <h2>Samantha Mayes</h2>
+        <h2>WDD 130-01</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -26,12 +24,12 @@
       <p>For those who loves Anikan Skywalker or for those who wants to learn more about Anikan Skywalker.</p>  <!-- change this -->
 
       <hr>
+      <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/Anakin Skywalker The Chosen One's Legacy.png" alt="Logo image">
+      <!-- Replace this with some sort of logo for your site. A logo can be as simple as the name of your site in a nice font :) -->
+      <img src="images/Anakin_Skywalker_The_Chosen_Ones_Legacy.png" alt="Logo image">
       <hr>
-      <h2>
         Style Guide
       </h2>
 
@@ -49,7 +47,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#7DF9FF]</td><td class="secondary">[#0E7C7B]</td><td class="accent1">[#53F4FF]</td><td class="accent2"></td>
+          <tr><td class="primary">[#7DF9FF]</td><td class="secondary">[#0E7C7B]</td><td class="accent1">[#53F4FF]</td><td class="accent2">[#2E8B5]</td>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
