--- a/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
+++ b/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
@@ -81,10 +81,10 @@
         <div class="container">
             <div class="column">
                 <img src="images/Darth_Vader_and_Anakin_Quotes.png" alt="First Image for home page">
-                <p>"Quotes and Memorable Moments of Anakin Skywalker," revisits the most iconic and unforgettable quotes and scenes from Anakin's life. This page allows fans to relive the powerful dialogues and impactful moments that have solidified Anakin Skywalker as a beloved character in the Star Wars universe. While no content is provided here, this page is intended to feature quotes and images that encapsulate the essence of Anakin's character and his journey, providing fans with a nostalgic trip through some of the most memorable aspects of Anakin's story.</p>
+                <p>"Quotes of Anakin Skywalker and Darth Vaders," revisits the most iconic and unforgettable quotes from Anakin's and Darth Vader's life. This page allows fans to relive the powerful dialogues and impactful moments that have solidified Anakin Skywalker as a beloved character in the Star Wars universe. While no content is provided here, this page is intended to feature quotes and images that encapsulate the essence of Anakin's character and his journey, providing fans with a nostalgic trip through some of the most memorable aspects of Anakin's story.</p>
             </div>
             <div class="column">
-                <img src="images/download (4).jpeg" alt="Second Image for home page">
+                <img src="images/anakin'sfamousqoutes.jpeg" alt="Second Image for home page">
                 <p>"This is where the fun begins"-Star Wars: Episode III -Revenge of the Sith</p>
                 <p>"One is never too old to learn, Snips"- Ahsoka </p>
                 <p>"I don't like sand. It's course and rough and irritating, and it gets everywhere"- Star Wars: Episode II- Attack of the Clones</p>
